<resources>
    <string name="app_name">G-Fit</string>
    <string name="LOGO">LOGO</string>
    <string name="project_by_nkanga_richard">project by Nkanga Richard</string>
    <string name="splash_screen_artwork">splash screen artwork</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="cardio_artwork">cardio artwork</string>

    <string name="cardio_exercises">Cardio Exercises</string>
    <string name="Stretching">Stretching </string>
    <string name="Calisthenics">Calisthenics </string>
    <string name="Weight">Weight Lifting</string>


    <string name="desc_one">Cardiovascular exercise is any activity that increases heart rate and breathing while using large muscle groups in a rhythmic way to improve oxygen and blood flow throughout the body.</string>
    <string name="desc_two">Stretching is an exercise in which a particular muscle or tendon (or muscle group) is purposely flexed or stretched in order to increase its perceived flexibility and attain comfortable muscular tone.</string>
    <string name="desc_three">Calisthenics, sometimes known as callisthenics, is a kind of strength training that involves a number of exercises that target big muscular groups, such as standing, gripping, and pushing.</string>
    <string name="desc_four">Exercises with weights are a prominent sort of strength training that is used to increase the strength and size of skeletal muscles.</string>
    <string name="start">START</string>
    <string name="your">YOUR</string>
    <string name="journey">JOURNEY.</string>
    <string name="g_e_t_s_t_a_r_t_e_d">G E T S T A R T E D</string>
    <string name="todo">TODO</string>

    <string name="s_i_g_n_i_n">Sign In</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up_here">Sign Up here.</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-Mail Address</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="s_i_g_n_u_p">Sign Up</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sign_in_here">Sign in here.</string>

    <string name="welcome">WELCOME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>