<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInScreen">


    <EditText
        android:id="@+id/siEmail"
        android:layout_width="349dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_text_box"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:paddingStart="13dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/siPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <EditText
        android:id="@+id/siPassword"
        android:layout_width="349dp"
        android:layout_height="58dp"
        android:layout_marginBottom="336dp"
        android:background="@drawable/custom_text_box"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/siEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/siEmail" />

    <Button
        android:id="@+id/siButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/custom_button"
        android:fontFamily="monospace"
        android:text="@string/s_i_g_n_i_n"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/siPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/siPassword" />

    <TextView
        android:id="@+id/suPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="48dp"
        android:text="@string/sign_up_here"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="@+id/siButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="48dp"
        android:text="@string/dont_have_an_account"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/siButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="71dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="91dp"
        android:fontFamily="@font/source_sanspro_bold"
        android:text="@string/welcome"
        android:textColor="#42505E"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="280dp"
        android:layout_height="71dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="91dp"
        android:fontFamily="@font/source_sanspro_bold"
        android:text="BACK"
        android:textColor="#42505E"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>