<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/titleimage"
        android:layout_width="316dp"
        android:layout_height="328dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/cardio_artwork"
        app:layout_constraintBottom_toTopOf="@+id/texttitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cardio"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textdescription"
        android:layout_width="402dp"
        android:layout_height="88dp"
        android:layout_marginBottom="44dp"
        android:alpha="1.0"
        android:fontFamily="@font/source_sans_pro_semi_bold"
        android:lineSpacingExtra="3sp"
        android:text="@string/desc_one"
        android:textAlignment="center"
        android:textColor="#001D2F"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/texttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sanspro_bold"
        android:text="@string/cardio_exercises"
        android:textAlignment="center"
        android:textColor="#001D2F"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textdescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>